feat: blog intro, features, sys arch, tech stack

--- a/data/blog/projects/save-a-life-maps.mdx
+++ b/data/blog/projects/save-a-life-maps.mdx
@@ -78,8 +78,7 @@ Figure 1.2: System Architecture
 
 The second mobile application offers general navigation purposes for users to travel from point A to point B. It also offers emergency services to users by simply tapping on the SOS button. The users can visually track the dispatched ESP through a maps interface upon availing the requested services in times of need. Additionally, users in transit receive notifications to make way if they are along the path of an incoming ESP.
 
-The RESTful API is an essential gateway between the mobile applications and the microservices. All requests that the client applications make to the server go through the API Gateway, which, in turn, communicates with a combination of one or more
-of the five microservices to provide the necessary information, data, and results. The API Gateway enables us to achieve abstraction and a loosely coupled microservices architecture, which allows for scalability of each microservice independently without having to worry about the client-side of the code base. The API Gateway also interacts with Google Maps API, which enables necessary functionality such as retrieving the Polyline Object and the user’s Geolocation. It also interacts with the NoSQL database to retrieve data about ESP. This data is essential for providing a timely and fast dispatch of services to the user in need, making the service efficient. The proposed [Novel Path Clearance Algorithm](/blog/projects/novel-path-clearance-algorithm) enables the users in transit along the path of an incoming ESP to get notified to make way ahead of time and provide a clear path.
+The RESTful API is an essential gateway between the mobile applications and the microservices. All requests that the client applications make to the server go through the API Gateway, which, in turn, communicates with a combination of one or more of the five microservices to provide the necessary information, data, and results. The API Gateway enables us to achieve abstraction and a loosely coupled microservices architecture, which allows for scalability of each microservice independently without having to worry about the client-side of the code base. The API Gateway also interacts with Google Maps API, which enables necessary functionality such as retrieving the Polyline Object and the user’s Geolocation. It also interacts with the NoSQL database to retrieve data about ESP. This data is essential for providing a timely and fast dispatch of services to the user in need, making the service efficient. The proposed [Novel Path Clearance Algorithm](/blog/projects/novel-path-clearance-algorithm) enables the users in transit along the path of an incoming ESP to get notified to make way ahead of time and provide a clear path.
 
 The system architecture of the SAL Maps mobile application is designed with scalability and efficiency in mind. The API Gateway provides a centralized communication point between the client and server-side of the application. The use of mobile applications, RESTful API, Google Maps API, NoSQL database, and microservices ensures that the application’s functionalities are divided into independent services, making it easy to scale and maintain.
 
