--- a/data/blog/projects/resource-booking-app.mdx
+++ b/data/blog/projects/resource-booking-app.mdx
@@ -48,7 +48,7 @@ As I began outlining the project's requirements and architecting its structure, 
 
 <p align="center">
   <Image
-    alt={`System Architecture`}
+    alt={`Tech Stack`}
     src={`/static/images/projects/resource booking app/Tech Stack.jpg`}
     width={500}
     height={300}
@@ -247,7 +247,7 @@ const checkScopes = requiredScopes("read:admin");
 
 <p align="center">
   <Image
-    alt={`Database schema`}
+    alt={`RBAC`}
     src={`/static/images/projects/resource booking app/RBAC.jpg`}
     width={580}
     height={220}
@@ -412,9 +412,9 @@ The Resource Booking App combines robust security with user-friendly features, o
 
 <p align="center">
   <Image
-    alt={`Database schema`}
-    src={`/static/images/projects/resource booking app/a.gif`}
-    width={580}
+    alt={`lesgoooo`}
+    src={`/static/images/projects/resource booking app/lesgo.gif`}
+    width={400}
     height={220}
     priority
   />
